--- a/project/.settings/org.eclipse.wst.common.component
+++ b/project/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="project">
+    <wb-module deploy-name="tatil">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="project"/>
-        <property name="java-output-path" value="/project/build/classes"/>
+        <property name="context-root" value="tatil"/>
+        <property name="java-output-path" value="/tatil/build/classes"/>
     </wb-module>
 </project-modules>
